--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,18 +11,17 @@ jobs:
         dotnet-version: [ '6.0.x' ]
 
     steps:
-       - name: Show Docker Info
-         run: |
-           docker context ls
+      - name: Show Docker Info
+        run: |
            echo $DOCKER_HOST
-#      - uses: actions/checkout@v3
-#      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
-#        uses: actions/setup-dotnet@v3
-#        with:
-#          dotnet-version: ${{ matrix.dotnet-version }}
-#      - name: Install dependencies
-#        run: dotnet restore
-#      - name: Build
-#        run: dotnet build --configuration Release --no-restore
-#      - name: Test
-#        run: dotnet test --no-restore
+      - uses: actions/checkout@v3
+      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: ${{ matrix.dotnet-version }}
+      - name: Install dependencies
+        run: dotnet restore
+      - name: Build
+        run: dotnet build --configuration Release --no-restore
+      - name: Test
+        run: dotnet test --no-restore
