--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,14 @@ jobs:
           docker context ls
           echo $DOCKER_HOST
           docker ps
-          docker run -p 80:80 -d nginx
+          sudo apt install redis-tools
+          docker run -p 6379:6379 redis
           docker ps
-          curl http://localhost:80
+          redis-cli SET mykey "Hello"
+          redis-cli GET mykey
+#          docker run -p 80:80 -d nginx
+#          docker ps
+#          curl http://localhost:80
 #      - uses: actions/checkout@v3
 #      - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
 #        uses: actions/setup-dotnet@v3
